// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateNew page tests CreateNew page draws correctly 1`] = `
<div>
  <div
    className="Content-main"
  >
    <h1
      className="Content-title"
    >
      Create new recipe
    </h1>
    <p>
      Instructions Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur placeat quasi dolor illum? Assumenda magni architecto velit aspernatur consequuntur cupiditate fugit vero tenetur rem perspiciatis exercitationem harum, ratione quas corrupti.
    </p>
    <div
      className="User-input"
    >
      <input
        placeholder="Enter recipe title"
        type="text"
        value=""
      />
    </div>
    <div
      className="User-input"
    >
      <textarea
        cols={50}
        placeholder="Enter description of recipe"
        rows={12}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DisplayOne page tests DisplayOne page draws correctly 1`] = `
<div
  className="Content-main"
>
  <h1
    className="Recipe-title"
  />
  <h5
    className="Recipe-tags"
  >
    Tags: 
  </h5>
  <h6
    className="Recipe-new"
  />
  <h6
    className="Recipe-popular"
  />
  <p
    className="Recipe-description>"
  />
  <div>
    <div>
      <label>
        Number of portions: 
      </label>
      <select
        defaultValue={4}
        name="portions"
        onChange={[Function]}
      >
        <option
          value={1}
        >
          1
        </option>
        <option
          value={2}
        >
          2
        </option>
        <option
          value={3}
        >
          3
        </option>
        <option
          value={4}
        >
          4
        </option>
        <option
          value={5}
        >
          5
        </option>
        <option
          value={6}
        >
          6
        </option>
        <option
          value={7}
        >
          7
        </option>
        <option
          value={8}
        >
          8
        </option>
        <option
          value={9}
        >
          9
        </option>
        <option
          value={10}
        >
          10
        </option>
      </select>
    </div>
    <table
      className="Ingredients-main"
    >
      <tbody>
        <tr>
          <th
            className="Ingredients-header"
          >
            Ingredients:
          </th>
          <th />
        </tr>
      </tbody>
    </table>
    <Link
      to="/edit/undefined"
    >
      <button
        className="Button-navigation"
      >
        Edit recipe
      </button>
    </Link>
    <button
      className="Button-navigation"
      onClick={[Function]}
    >
      Add to shopping list
    </button>
    <button
      className="Button-navigation"
      onClick={[Function]}
    >
      <BsHandThumbsUp />
    </button>
  </div>
  <div>
    <Link
      to="/"
    >
      <button
        className="Button-navigation"
      >
        Back
      </button>
    </Link>
  </div>
</div>
`;

exports[`EditRecipes page tests EditRecipes page draws correctly 1`] = `
<div>
  <h1>
    Site to edit the recipes
  </h1>
</div>
`;

exports[`Explore page tests Explore page draws correctly 1`] = `
<div
  className="Content-main"
>
  <h1>
    A place to discover new recipes, API or other
  </h1>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, perferendis illo nam consectetur adipisci quas quaerat omnis dolore repellendus deserunt, at placeat, laudantium quod? Facilis, nam soluta voluptates modi odio, nostrum deleniti cupiditate molestias debitis iste, error laboriosam? Officia fugit quos officiis voluptatem iure laboriosam perferendis libero sit sapiente impedit.
  </p>
</div>
`;

exports[`Home page tests Home page draws correctly (snapshot) including list of buttons 1`] = `
<div>
  <div
    class="Content-main"
  >
    <h1>
      Welcome to the Tasty
    </h1>
    <p>
      Here you can explore your own recipes by adding new content, editing existing ones and deleting the ones you don't care about anymore.
    </p>
    <p>
      This is also the place to discover more and get inspiration from, we have selected a few to show you from [External API] below.
    </p>
    <div
      class="Content-second"
    >
      <ul>
        <a
          href="/recipe/1"
        >
          <button
            class="Button-recipe-navigation"
          >
            One-Pot Mac and Cheese
          </button>
        </a>
        <a
          href="/recipe/2"
        >
          <button
            class="Button-recipe-navigation"
          >
            Easy Marinated Grilled Flank Steak
          </button>
        </a>
      </ul>
      <div
        class="Content-second"
      >
        <h5>
          [Place for external API recipes here]
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`ShoppingCart page tests ShoppingCart page draws correctly 1`] = `
<div>
  <h1>
    This is your shopping cart to be....
  </h1>
</div>
`;
